# BOB

./: .env.example  .gitignore  Claude.md  PROJECT_IDEA.md  README.md  TECH_SPEC.md  pyproject.toml  schedule.yaml
src/: config.py  handlers.py  main.py  schedule_loader.py  scheduler_service.py
